--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,6 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gobelins.mbrunelliere.userlogin.Profile.UserFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,7 +20,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Logout"
+        android:text="Logout"
         android:id="@+id/logOut"
         android:layout_marginTop="23dp"
         android:layout_alignParentBottom="true"
@@ -27,7 +32,8 @@
         android:inputType="textPersonName"
         android:text="Name"
         android:ems="10"
-        android:id="@+id/editText"
+        android:editable="false"
+        android:id="@+id/editName"
         android:hint="@string/signin.name"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -38,12 +44,13 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText3"
+        android:editable="false"
+        android:id="@+id/editEmail"
         android:layout_marginTop="44dp"
         android:hint="@string/signin.mail"
-        android:layout_below="@+id/editText"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+        android:layout_below="@+id/editName"
+        android:layout_alignLeft="@+id/editName"
+        android:layout_alignStart="@+id/editName" />
 
 
 </RelativeLayout>
