--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -20,7 +20,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Logout"
+        android:text="Déconnexion"
         android:id="@+id/logOutButton"
         android:layout_marginTop="23dp"
         android:layout_alignParentBottom="true"
