--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,10 +5,13 @@
     tools:context="com.gobelins.mbrunelliere.userLogin.MainActivity">
     <item
         android:id="@+id/menuMainLoginItem"
-        android:orderInCategory="100"
         android:title="@string/menu.main.login"
         app:showAsAction="never" />
     <item
         android:id="@+id/menuMainRegisterItem"
         android:title="@string/menu.main.register" />
+    <item
+        android:id="@+id/menuMainProfileItem"
+        android:orderInCategory="100"
+        android:title="@string/menu.main.profile" />
 </menu>
