--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,15 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Editer votre profil utilisateur"
-        android:layout_alignBottom="@+id/logOutButton"
+        android:layout_alignBottom="@+id/saveButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Déconnexion"
-        android:id="@+id/logOutButton"
+        android:text="@string/profile.saveButton"
+        android:id="@+id/saveButton"
         android:layout_marginTop="23dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
