--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -4,4 +4,16 @@
     tools:context="com.gobelins.mbrunelliere.userlogin.ChatActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/actions_Profile"
+        android:orderInCategory="100"
+        android:title="@string/action.profile" />
+    <item
+    android:id="@+id/actions_Logout"
+    android:orderInCategory="100"
+    android:title="@string/action.logout" />
+    <item
+        android:id="@+id/actions_Chat"
+        android:orderInCategory="100"
+        android:title="@string/action.chat" />
 </menu>
