--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -16,34 +16,14 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <EditText
-        android:id="@+id/chatMessageInput"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/mainContainer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/chatSendButton"
-        android:ems="10"
-        android:hint="@string/chat.message"
-        android:inputType="textMultiLine"
-        tools:text="@string/chat.message" />
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/chatSendButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/chat.sendButton" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvMessages"
-        android:layout_below="@id/toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/chatMessageInput"/>
 
 
 </RelativeLayout>
