--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="Drawer With Swipe Tabs"
+        app:title="Mr Bender"
         android:background="@color/colorPrimary"
         android:transitionGroup="true" />
 
