--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,7 @@
     android:id="@+id/mainWrapper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#648296"
     tools:context=".ChatActivity">
 
     <android.support.v7.widget.Toolbar
