--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:textColor="#ffffff"
         android:layout_toLeftOf="@+id/chatSendButton"
         android:ems="10"
         android:hint="@string/chat.message"
@@ -24,6 +25,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:background="#55758a"
+        android:textColor="#ffffff"
         android:text="@string/chat.sendButton" />
 
     <android.support.v7.widget.RecyclerView
