--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#648296"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,31 +14,42 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/signin.info" />
+        android:text="@string/signin.info"
+        android:textColor="#ffffff" />
 
     <Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/signin.button" />
+        android:layout_alignEnd="@+id/view"
+        android:layout_alignLeft="@+id/view"
+        android:layout_alignRight="@+id/view"
+        android:layout_alignStart="@+id/view"
+        android:layout_below="@+id/view"
+        android:layout_marginTop="53dp"
+        android:background="#55758a"
+        android:text="@string/signin.button"
+        android:textColor="#ffffff"
+        />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/editName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+
+        android:layout_marginTop="60dp">
 
         <EditText
             android:id="@+id/signinName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
             android:ems="10"
             android:hint="@string/signin.name"
+            android:textColorHint="#ffffff"
             android:inputType="textPersonName"
-            android:layout_marginTop="80dp"
+            android:textColor="#ffffff"
             tools:text="Name" />
     </android.support.design.widget.TextInputLayout>
 
@@ -57,10 +69,13 @@
             android:ems="10"
             android:hint="@string/signin.mail"
             android:inputType="textPersonName"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff"
             tools:text="Email" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editMail"
@@ -76,6 +91,8 @@
             android:ems="10"
             android:hint="@string/signin.password"
             android:inputType="textPassword"
+            android:textColor="#ffffff"
+            android:textColorHint="#ffffff"
             tools:text="Password" />
     </android.support.design.widget.TextInputLayout>
 
