--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -2,55 +2,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#648296"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gobelins.mbrunelliere.userlogin.Profile.UserFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Editer votre profil utilisateur"
-        android:layout_alignBottom="@+id/saveButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <Button
+        android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/profile.saveButton"
-        android:id="@+id/saveButton"
-        android:layout_marginTop="23dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="23dp"
+        android:background="#55758a"
+        android:text="@string/profile.saveButton"
+        android:textColor="#ffffff" />
 
     <EditText
+        android:id="@+id/editName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:ems="10"
-        android:editable="false"
-        android:id="@+id/editName"
-        android:hint="@string/signin.name"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="88dp" />
+        android:layout_marginTop="88dp"
+        android:editable="false"
+        android:ems="10"
+        android:hint="@string/signin.name"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textColor="#ffffff" />
 
     <EditText
+        android:id="@+id/editEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:editable="false"
-        android:id="@+id/editEmail"
-        android:layout_marginTop="44dp"
-        android:hint="@string/signin.mail"
-        android:layout_below="@+id/editName"
         android:layout_alignLeft="@+id/editName"
-        android:layout_alignStart="@+id/editName" />
+        android:layout_alignStart="@+id/editName"
+        android:layout_below="@+id/editName"
+        android:layout_marginTop="44dp"
+
+        android:editable="false"
+        android:ems="10"
+        android:hint="@string/signin.mail"
+        android:inputType="textEmailAddress"
+        android:textColor="#ffffff" />
 
 
 </RelativeLayout>
