--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -4,9 +4,6 @@
     <item android:title="Messagerie instantanée"
         android:id="@+id/nav_item_messenger"/>
 
-    <item android:title="Contacts"
-        android:id="@+id/nav_item_contacts"/>
-
     <item android:title="Historique">
         <menu>
             <item
@@ -19,8 +16,8 @@
     </item>
 
     <group android:id="@+id/group_settings_id">
-        <item android:title="A propos"
-              android:id="@+id/nav_item_about"/>
+        <item android:title="Se déconnecter"
+              android:id="@+id/nav_item_logout"/>
     </group>
 
 
